add attention score

--- a/doc/all.bib
+++ b/doc/all.bib
@@ -24,6 +24,22 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{vaswani2017attention,
+  title={Attention is all you need},
+  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}
+}
+
+@inproceedings{fu2019dual,
+  title={Dual attention network for scene segmentation},
+  author={Fu, Jun and Liu, Jing and Tian, Haijie and Li, Yong and Bao, Yongjun and Fang, Zhiwei and Lu, Hanqing},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={3146--3154},
+  year={2019}
+}
+
 @article{mirhoseini2020chip,
   author    = {Azalia Mirhoseini and
                Anna Goldie and
