capitilized the defenition of an  acronym. RL is defined in the intro so no need to redfine
Signed-off-by: BASHAR ROMANOUS <basharromano@micron.com>

--- a/doc/sections/Conclusion.tex
+++ b/doc/sections/Conclusion.tex
@@ -4,7 +4,7 @@ It can search for optimal mappings while using the learning to map previously un
 Thus, improving the total time required to get a mapping as compared to the existing manual placement approach and allows for automated search of mappings with different optimizations under different trade-offs, hence reducing the manual labor required to find mappings. 
 
 The chip placement problem space can be modeled as mapping an SDF graph onto a dataflow architecture.
-Thus, the presented work has the potential to be applied to chip placement.
+Thus, the presented work will be applicable for chip placement.
 
 Future work includes: 
 \begin{itemize}
@@ -12,5 +12,5 @@ Future work includes:
     \item Increasing sample efficiency of learning methods and improving the simulation environment for the SE by adding more constraints. 
     \item Studying the impact of reusing the trained networks across graphs rather than training a network from scratch for a given SDF graph.
     \item Integration of RL mapper into the SE toolset.
-    \item Investigating the application of the proposed techniques to chip placement problem.
+    \item Investigating the application of the proposed techniques for chip placement.
 \end{itemize}
