--- a/doc/sections/Introduction.tex
+++ b/doc/sections/Introduction.tex
@@ -66,7 +66,7 @@ Each node in the DFG is an instruction that is mapped to a specific slot on a ti
 
 This line of research is inspired by recent work that used RL for chip placement \cite{mirhoseini2020chip}.
 The problem requirement of mapping nodes of a DFG to available compute elements is similar to the problem of placing nodes of a chip netlist on a chip canvas. 
-Due to the similarities between these problem domains, we theorize that our approach has the potential of being used in the chip placement.
+Due to the similarities between these problem domains, we theorize that our approach has the potential of being used for chip placement.
 This hypothesis will be investigated in future work.
 
 The rest of this paper is organized as follows: 
