--- a/doc/sections/se.tex
+++ b/doc/sections/se.tex
@@ -7,18 +7,18 @@ These asynchronous operations include initiating SDF operations, transferring da
   \begin{subfigure}{.5\textwidth}
     \centering
     \includegraphics[trim=118 310 180 110, clip, width=0.7\linewidth]{fig/se_device.pdf}
-    \caption{Diagram of the SE device}
+    \caption{SE device}
     \label{fig:sub-se}
     \end{subfigure}
   \begin{subfigure}{.5\textwidth}
   \centering
   \includegraphics[trim=300 100 8 50, clip, width=0.5\linewidth]{fig/se_device_tile.pdf}
-  \caption{Detailed diagram of a tile in the SE device.
-  Note the two tile memory units, the MS and AL units, and the four SF inputs and four SF outputs}
+  \caption{SE tile}
   \label{fig:sub-tile}
   \end{subfigure}
   \caption{
-    Layout of the SE device is shown in \figurename~\ref{fig:sub-se}, while \figurename~\ref{fig:sub-tile} details an SE tile.
+    \figurename~\ref{fig:sub-se} shows layout of the SE device and dataflow paths between tiles. \figurename~\ref{fig:sub-tile} is a detailed diagram of a tile in the SE device. 
+    Note the two tile memory units, the MS and AL units, and the four SF inputs and four SF outputs.
   }
   \label{fig:se_diagram}
 \end{figure}
