--- a/doc/sections/Introduction.tex
+++ b/doc/sections/Introduction.tex
@@ -50,13 +50,16 @@ This process also adds assumptions that reduce the search space, trading off opt
 
 In this work we propose a deep Reinforcement Learning (RL) method to explore and find optimal mappings in an unsupervised manner. 
 Using the Proximal Policy Optimization (PPO) method we train a neural network model to place instructions onto the SE tiles guided by a reward function in an environment that models the SE device and its constraints. 
-The trained model is able to create valid mappings for the SE by learning about the structure of the problem domain. 
+We also present Global Graph Attention module that improves the baseline feedforward models by providing attention mechanism to the RL model.
+Our RL method is combined with output masking, finetuning and sorted iteration order, which will be presented in the following sections.
 
+The trained model is able to create valid mappings for the SE by learning about the structure of the problem domain.
+On average addition of GGA finds 10\% better instruction schedules in terms of clock cycles for varying graphs complexities and different SE device configurations.
 
 The key contributions of this paper are as follows:
 \begin{enumerate}
     \item A Reinforcement Learning methodology that is able to map the instructions from a given DFG to the processing elements in the SE and has the potential to be reused across SDF graphs.
-    \item An analysis of different factors that impacts the quality of mappings obtained.
+    \item An analysis of different factors that impacts the quality of mappings obtained, such as attention module, output masking and iteration order.
 \end{enumerate}
 
 This work is motivated by the need to provide an improved SE toolset that lowers the SE usability barrier for a programmer.
@@ -66,8 +69,8 @@ Each node in the DFG is an instruction that is mapped to a specific slot on a ti
 
 This line of research is inspired by recent work that used RL for chip placement \cite{mirhoseini2020chip}.
 The problem requirement of mapping nodes of a DFG to available compute elements is similar to the problem of placing nodes of a chip netlist on a chip canvas. 
-Due to the similarities between these problem domains, we theorize that our approach has the potential of being used for chip placement.
-This hypothesis will be investigated in future work.
+% Due to the similarities between these problem domains, we theorize that our approach has the potential of being used for chip placement.
+% This hypothesis will be investigated in future work.
 
 The rest of this paper is organized as follows: 
 Section \ref{sec:relatedwork} discusses related work.
