--- a/doc/sections/Related_work.tex
+++ b/doc/sections/Related_work.tex
@@ -20,7 +20,7 @@ Each operation in the DFG is mapped to a functional unit in the MMRG using simul
 The routing between inputs and outputs of each operation is selected using PathFinder-like algorithm \cite{pathfinder}.
 
 SE differentiates from others as the first CGRA in a near-data computing architecture.
-SE also provides asynchronous messaging as a first-class programming construct along with synchronous data flow. 
+SE also provides asynchronous messaging as a first-class programming construct along with an SDF. 
 %A key challenge with SE applications is efficient compilation of high-level language code (for example, in C/C++) to executable program. 
 
 
